fix margin for logo and nav and title edit

--- a/Sakura Ramen Webseite/style.css
+++ b/Sakura Ramen Webseite/style.css
@@ -21,11 +21,13 @@ body {
 .logo {
     width: 64px;
     height: 64px;
+    margin-left: 110px;
 }
 
 .nav {
     display: flex;
     justify-content: space-between;
+    margin-right: 110px;
 }
 .nav a {
     color: white;
