--- a/Sakura Ramen Webseite/style.css
+++ b/Sakura Ramen Webseite/style.css
@@ -114,12 +114,36 @@ body {
 }
 
 .our_menu {
+    margin-top: 120px;
+    background-image: url("assets/img/3_section_our_menu/JPG/section_our_menu_bg.jpg");
+    background-repeat: no-repeat;
+    height: 4699px;
+}
+
+.title_menu {
+    padding-top: 120px;
     font-family: Raleway, system-ui;
     font-size: 80px;
     font-weight: bold;
     color: #9F0908;
-    margin-top: 240px;
-    display: flex;
-    justify-content: center;
-    background-image: url("assets/img/3_section_our_menu/JPG/section_our_menu_bg.jpg");
+    margin-top: 120px;
+    text-align: center;
 }
+
+.menu_1 {
+    margin-top: 64px;
+    padding-left: 160px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.img_menu_1 img {
+    height: 352px;
+    width: 352px;
+}
+
+.menu_1_list {
+    margin-left: 20px;
+}
+
