--- a/Sakura Ramen Webseite/style.css
+++ b/Sakura Ramen Webseite/style.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 0;
 }
@@ -134,8 +135,7 @@ body {
     margin-top: 64px;
     padding-left: 160px;
     display: flex;
-    justify-content: start;
-    align-items: center;
+    flex-direction: row;
 }
 
 .img_menu_1 img {
