--- a/Sakura Ramen Webseite/style.css
+++ b/Sakura Ramen Webseite/style.css
@@ -36,6 +36,16 @@ body {
     font-family: "Raleway", system-ui;
     font-size: 24px;
     margin-left: 24px;
+    display: flex;
+    align-items: center;
+}
+
+.nav a:hover {
+    color: rgba(255, 255, 255, 0.44);
+}
+
+.nav a:last-child {
+    color: white; !important;
 }
 
 .button_tel {
@@ -43,6 +53,9 @@ body {
     padding: 8px 19px;
     border-radius: 8px;
     border: solid white;
+}
+.button_tel:hover {
+    background-color: #cf0707;
 }
 
 .icon_phone {
@@ -53,14 +66,14 @@ body {
     height: 24px;
 }
     
-.hero_top {
+.hero-header {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
 }
 
-.title_top {
+.hero-title {
     font-family:  "Raleway", system-ui;
     font-weight: bold;
     font-size: 96px;
@@ -85,17 +98,17 @@ body {
     justify-content: center;
 }
 
-.style_text_img {
+.order-options-container {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 
 }
 
-.margin_left {
+.order-option-left {
     margin-left: 160px;
 }
-.margin_right {
+.order-option-right {
     margin-right: 160px;
 }
 
@@ -114,14 +127,14 @@ body {
     margin-top: 0;
 }
 
-.our_menu {
+.menu-section {
     margin-top: 120px;
     padding-bottom: 120px;
     background-image: url("assets/img/3_section_our_menu/JPG/section_our_menu_bg.jpg");
     background-repeat: no-repeat;
 }
 
-.title_menu {
+.menu-title {
     padding-top: 120px;
     font-family: Raleway, system-ui;
     font-size: 80px;
@@ -173,13 +186,6 @@ body {
     font-weight: bold;
     font-size: 32px;
 }
-.item {
-    display: inline;
-}
-
-.price {
-    float: right;
-}
 
 .menu_item > .list {
     display: flex;
@@ -187,7 +193,7 @@ body {
     gap: 8px;
 }
 
-.menu_item h2 {
+.menu_item h3 {
     margin-top: 0;
     margin-bottom: 16px;
     font-family: Economica, system-ui;
@@ -196,7 +202,7 @@ body {
     text-align: left;
 }
 
-.find_h1 {
+.find-us-title {
     font-family: Raleway, system-ui;
     font-size: 80px;
     font-weight: bold;
@@ -222,12 +228,18 @@ body {
     vertical-align: text-top;
 }
 
+.maps {
+    width: 100%;
+    height: 600px;
+    border: 0;
+}
+
 footer {
     height: 144px;
     width: 100%;
 }
 
-.footer_container {
+.footer-wrapper {
     margin-top: 8px;
     background-color: #0A141E;
     height: 144px;
@@ -238,11 +250,11 @@ footer {
     padding-right: 160px;
 }
 
-.footer_logo img{
+.footer-logo img{
     height: 44px;
 }
 
-.footer_icons img{
+.footer-icons img{
     width: 40px;
     height: 40px;
     margin-left: 8px;
