--- a/Sakura Ramen Webseite/style.css
+++ b/Sakura Ramen Webseite/style.css
@@ -56,6 +56,7 @@ body {
     padding: 8px 19px;
     border-radius: 8px;
     border: solid white;
+    height: 34px;
 }
 .button_tel:hover {
     background-color: #cf0707;
@@ -117,7 +118,6 @@ body {
 
 .img_style {
     width: 124px;
-    height: 124px;
     margin-bottom: 16px;
     margin-left: 17px;
     margin-right: 17px;
@@ -270,17 +270,26 @@ footer {
     margin-left: 8px;
 }
 
-@media (max-width: 815px) {
-    .logo {
-        margin: auto;
-        flex-grow: 1;
+.footer-logo-mobile {
+    display:none;
+}
+
+@media (max-width: 770px) {
+    .navbar {
+        margin-top: 24px;
+        height: 112px;
     }
+
+    .logo {
+        margin-left: 24px;
+    }
+
     .nav {
-        display: flex;
-        flex-direction: column;
-        gap: 0.5em;
-        margin-top: 0.5em;
-        margin-right: 1em;
+        margin-right: 24px;
+    }
+
+    .nav a:not(:last-child) {
+        display: none;
     }
     .nav > .button_tel {
         display: block;
@@ -292,26 +301,36 @@ footer {
         justify-content: space-between;
     }
 
-    .smartphone {
-        text-align: center;
+    .hero-title {
+        font-size: 72px;
     }
 
-    .hero-title {
-        font-size: 55px;
+    .subtitle {
+        font-size: 20px;
     }
 
     .how_to_order {
+        margin-top: 96px;
         text-align: center;
-        font-size: 55px;
+        font-size: 64px;
     }
 
     .order-options-container {
-        display: flex;
-        flex-direction: column;
+        padding-left: 0;
+        padding-right: 0;
+        justify-content: space-between;
+        margin-left: 24px;
+        margin-right: 24px;
     }
+
+    .img_style {
+        width: 112px;
+    }
+
     .order-option-left {
         margin-left: 0;
     }
+
     .order-option-right {
         margin-right: 0;
     }
@@ -323,18 +342,25 @@ footer {
     }
 
     .menu-container {
-        align-items: center;
         display: flex;
-        flex-direction: column;
+        gap: 32px;
+    }
+
+    .menu_item {
+        min-width: min(44%, 500px);
     }
 
     .menu_item h3 {
-        text-align: center;
+        font-size: 32px;
     }
 
     .list {
-        margin-left: 1em;
-        margin-right: 1em;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .item_price {
+        font-size: 24px;
     }
 
     .item_price > tbody > tr {
@@ -354,20 +380,114 @@ footer {
     }
 
     .menu {
-        margin-left: 0;
-        margin-right: 0;
+        margin-left: 24px;
+        margin-right: 24px;
     }
 
-    .menu > img {
-        display: block;
-        margin-left: auto;
+    .menu:nth-child(odd) > img {
+        padding-left: 24px;
+    }
+    .menu:nth-child(even) > img {
+        padding-right: 24px;
+    }
+    .menu:nth-child(odd) > .menu_item {
+        margin-left: 24px;
+    }
+    .menu:nth-child(even) > .menu_item {
+        margin-right:24px;
+    }
+
+    .find-us-title {
+        text-align: center;
+        font-size: 64px;
+    }
+
+    .address {
+        text-align: center;
+        font-size: 20px;
+        margin-bottom: 48px;
+    }
+
+    .footer-wrapper {
+        display: flex;
+        justify-content: space-between;
+        padding-left: 24px;
+        padding-right: 24px;
         margin-right: auto;
+    }
+
+    .footer-logo-desktop {
+        height: 44px;
+    }
+
+    .footer-logo-mobile {
+        display:none;
+    }
+}
+
+@media (max-width: 375px) {
+    .navbar {
+        height: 64px;
+        margin-top: 16px;
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+
+    .logo {
+        height: 40px;
+        width: 40px;
+    }
+
+    .nav a {
+        font-size: 16px;
+    }
+
+    .button_tel {
+        height: 23px;
+    }
+
+    .hero-title {
+        font-size: 44px;
+    }
+
+    .subtitle {
+        font-size: 16px;
+    }
+
+    .how_to_order {
+        margin-top: 72px;
+        font-size: 40px;
+    }
+
+    .order-options-container {
+        flex-direction: column;
+        justify-content: unset;
+    }
+
+    .text_style {
+        font-size: 32px;
+        margin-bottom: 0;
+    }
+
+    .menu-section {
+        margin-top: 72px;
+    }
+
+    .menu-title {
+        padding-top: 72px;
+        margin-top: 0;
+    }
+
+    .menu-title {
+        font-size: 40px;
+        margin-bottom: 40px;
     }
 
     .menu:nth-child(odd) > img {
         float: unset;
         padding-left: 0;
     }
+
     .menu:nth-child(even) > img {
         float: unset;
         padding-right: 0;
@@ -381,33 +501,69 @@ footer {
         margin-right: 0;
     }
 
+    .menu-container {
+        gap: 32px;
+    }
+
+    .menu-section {
+        padding-bottom: 72px;
+    }
+
+    .menu {
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+
+    .menu img {
+        width: min(100%, 352px)
+    }
+
+    .menu_item {
+        min-width: min(100%, 500px);
+        text-align: left;
+        justify-content: unset;
+        margin-top: 24px;
+        height: unset;
+    }
+
+    .menu_item h3 {
+        font-size: 32px;
+    }
+
     .find-us-title {
-        text-align: center;
+        font-size: 40px;
     }
 
     .address {
-        text-align: center;
+        font-size: 16px;
+    }
+
+    .address img {
+        width: 20px;
+        height: 20px;
+        margin-right: 2px;
+    }
+
+    footer {
+        height: 86px;
     }
 
     .footer-wrapper {
-        display: flex;
-        justify-content: center;
-        padding-left: unset;
-        padding-right: unset;
-        margin-right: auto;
+        height: 86px;
     }
 
-    .footer-logo img {
-        height: 28px;
-    }
-}
-
-@media (max-width: 300px) {
-    .menu_item h3 {
-        font-size: 46px;
+    .footer-icons img {
+        height: 32px;
+        width: 32px;
     }
 
-    .item_price {
-        font-size: 22px;
+    .footer-logo-desktop {
+        display: none;
     }
+
+    .footer-logo-mobile {
+        display: unset;
+        height: 40px;
+    }
+
 }
