--- a/Kochwelt/css/index.css
+++ b/Kochwelt/css/index.css
@@ -58,21 +58,39 @@ display: flex;
 .nav-links {
     display: flex;
     gap: 30px; 
-    padding-top: 48px;
+    padding-top: 75px;
+    font-weight: 600;
+    font-size: 16px;
 }
 
 .nav-links a {
     text-decoration: none;
     color: #333;
-    font-weight: 600;
-    font-size: 16px;
-    transition: color 0.3s;
+    position: relative;
 }
 
 .nav-links a:hover {
     color: #666;
-    text-decoration: underline;
+    text-decoration: none;
 }
+
+/* nav-links transition */
+.nav-links a::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: 0px;
+    width: 0;                       /* Startpunkt: Keine Breite */
+    height: 3px;                    /* Startpunkt: Dicke der Linie */
+    background-color: green;      /* Farbe der Linie */
+    transition: width 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55); /* Korrektur */
+    transform: translateX(-50%);    /* sorgt dafür, dass die Linie mittig ist */
+}
+
+.nav-links a:hover::after {
+    width: 100%;                    /* Linie füllt sich bei Hover */
+}
+
 
 
 /* section 2 */
@@ -173,26 +191,23 @@ display: flex;
 
 
 /* Styling Footer */
-a {
-    padding-left: 10px;
+
+
+.footer_buttons{
+    color: white;
     text-decoration: none;
-    color: black;
+    margin-left:  50px;
 }
 
-a:hover {
-
+.footer_buttons:hover{
     text-decoration: underline;
-    cursor: pointer;
+    
 }
 
-.navfooter {
-    gap: 25px;
-
-}
 
 .navfooter a:hover {
     text-decoration: none;
-    filter: drop-shadow(0px 0px 10px #0e0d0d);
+    filter: drop-shadow(0px 0px 10px #c0bfbf);
 }
 
 footer {
@@ -221,9 +236,17 @@ footer {
 
 .footerlinks { 
     font-weight: 600;
+    gap: 30px
+    ;
+
 }
 
 .footersocials {
     margin-right: 180px;
 
+}
+.sociallogo{
+    width: 40px;
+    height: 40px;
+    margin-left: 15px;
 }
