--- a/Rock Band Website/Kochwelt/css/index.css
+++ b/Rock Band Website/Kochwelt/css/index.css
@@ -1,4 +1,4 @@
-* {
+*{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -14,16 +14,16 @@ html {
 }
 
 .raleway {
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 
 .main-head {
-    display: flex;
+display: flex;
 
-}
+} 
 
 .logo-head {
     margin-top: 2em;
@@ -33,7 +33,7 @@ html {
 }
 
 /* Header Styling */
-header {
+.header {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -43,7 +43,7 @@ header {
     position: sticky;
     top: 0;
     z-index: 1000;
-
+   
 }
 
 .main-head {
@@ -52,49 +52,43 @@ header {
     align-items: center;
     width: 100%;
     margin-left: 180px;
-    margin-right: 180px;
+    margin-right:180px; 
 }
 
-nav {
+.nav-links {
     display: flex;
-    gap: 30px;
+    gap: 30px; 
     padding-top: 75px;
     font-weight: 600;
     font-size: 16px;
 }
 
-nav a {
+.nav-links a {
     text-decoration: none;
     color: #333;
     position: relative;
 }
 
-nav a:hover {
+.nav-links a:hover {
     color: #666;
     text-decoration: none;
 }
 
 /* nav-links transition */
-nav a::after {
+.nav-links a::after {
     content: "";
     position: absolute;
     left: 50%;
     bottom: 0px;
-    width: 0;
-    /* Startpunkt: Keine Breite */
-    height: 3px;
-    /* Startpunkt: Dicke der Linie */
-    background-color: green;
-    /* Farbe der Linie */
-    transition: width 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    /* Korrektur */
-    transform: translateX(-50%);
-    /* sorgt dafür, dass die Linie mittig ist */
+    width: 0;                       /* Startpunkt: Keine Breite */
+    height: 3px;                    /* Startpunkt: Dicke der Linie */
+    background-color: green;      /* Farbe der Linie */
+    transition: width 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55); /* Korrektur */
+    transform: translateX(-50%);    /* sorgt dafür, dass die Linie mittig ist */
 }
 
-nav a:hover::after {
-    width: 100%;
-    /* Linie füllt sich bei Hover */
+.nav-links a:hover::after {
+    width: 100%;                    /* Linie füllt sich bei Hover */
 }
 
 
@@ -108,7 +102,7 @@ nav a:hover::after {
     background-color: #fff;
     overflow: hidden;
     padding-top: 4em;
-    margin-left: 180px;
+    margin-left: 180px; 
 }
 
 .recipe-section img {
@@ -163,7 +157,7 @@ nav a:hover::after {
 
 .menu-section {
     margin-left: 180px;
-    margin-right: 180px;
+    margin-right:180px; 
     margin-top: 4em;
     display: flex;
     justify-content: space-between;
@@ -173,7 +167,7 @@ nav a:hover::after {
 }
 
 .menu {
-    display: flex;
+    display: flex;  
     flex-direction: column;
 }
 
@@ -197,7 +191,6 @@ nav a:hover::after {
 
 
 /* Styling Footer */
-
 .footer {
     width: 100%;
     font-family: "Raleway";
