--- a/Kochwelt/css/index.css
+++ b/Kochwelt/css/index.css
@@ -19,6 +19,11 @@ html {
     font-style: normal;
 }
 
+h2 {
+    font-size: 24px;
+    font-weight: 700;
+}
+
 
 .main-head {
     display: flex;
@@ -26,10 +31,7 @@ html {
 }
 
 .logo-head {
-    margin-top: 2em;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+    margin-top: 1em;
 }
 
 /* Header Styling */
@@ -40,10 +42,14 @@ header {
     background-color: #fff;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: sticky;
+    /* position: sticky; */
     top: 0;
-    z-index: 1000;
+    /* z-index: 1000; */
+}
 
+.logo-head img {
+    width: 200px; 
+    height: 75px; 
 }
 
 .main-head {
@@ -79,10 +85,10 @@ nav a::after {
     content: "";
     position: absolute;
     left: 50%;
-    bottom: 0px;
+    bottom: -8px;
     width: 0;
     /* Startpunkt: Keine Breite */
-    height: 3px;
+    height: 5px;
     /* Startpunkt: Dicke der Linie */
     background-color: green;
     /* Farbe der Linie */
@@ -185,8 +191,8 @@ nav a:hover::after {
 }
 
 .menu img {
-    width: 215px;
-    height: 250px;
+    width: 280px;
+    height: 220px;
     border-radius: 12px;
 }
 
@@ -194,6 +200,31 @@ nav a:hover::after {
     text-align: center;
 }
 
+/* Section 4 */
+
+.section-info-board {
+    text-align: center;
+    margin-left: 180px;
+    margin-right: 180px;
+}
+
+.info-board {
+    display: flex;
+    align-items: center;
+    padding: 24px 0 56px 0;
+    gap: 40px;
+}
+
+.info-board-img-right {
+    width: 280px;
+    border-radius: 8px;
+    
+}
+
+.info-board p {
+    line-height: 1.6;
+    color: rgb(119, 125, 135);
+}
 
 
 
