--- a/Kochwelt/css/adrians_rezept.css
+++ b/Kochwelt/css/adrians_rezept.css
@@ -1,24 +1,25 @@
-
-.container {
+.main_container {
     max-width: 1200px;
     margin: 0 auto;
 }
 
-.recipe-title {
+.recept_title {
     text-align: center;
     font-size: 28px;
     font-weight: 600;
     margin-bottom: 20px;
     margin-top: 20px;
 }
-
-.recipe-image {
+.recept_image {
+    /*Bild im Hintergrund Skalieren ? */
     width: 100%;
     height: 300px;
+    background-image: url('./img/Entenbrust.png');
+    background-size: cover;
+    background-position: center;
     border-radius: 10px;
     margin-bottom: 20px;
-    image-rendering: optimizeSpeed;
-    position: static;
+
 }
 
 .recipe-meta {
@@ -30,28 +31,19 @@
 .meta-item {
     display: flex;
     align-items: center;
-    gap: 26px;
+    gap: 24px;
     font-size: 18px;
     background-color: #EAEAEA;
-    padding: 10px 15px;
+    padding: 6px 15px;
     border-radius: 10px;
-    min-width: 150px;
-}
+    min-width: 150px;}
 
-.border {
-    margin-top: 48px;
-    margin-bottom: 12px;
-    background-color: rgba(168, 165, 165, 0.2);
-    height: 3px;
-}
-
-.meta-icon {
+    .meta-icon {
     width: 20px;
     height: 20px;
     background-image: url('./img/icon-clock.png');
     background-position: center;
 }
-
 .portion-control {
     display: flex;
     align-items: center;
@@ -62,7 +54,7 @@
 .portion-control input {
     width: 50px;
     padding: 5px;
-    font-size: 16px;
+    font-size: 18px;
     text-align: center;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -89,7 +81,7 @@
 .ingredients-title {
     font-size: 20px;
     font-weight: 600;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 .ingredient-item {
@@ -99,6 +91,17 @@
     font-size: 18px;
     font-weight: 400;
     border-radius: 5px;
+}
+
+.ingredients-text {
+    color: #333;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 18px;
+
+
+
+
 }
 
 .ingredient-item:nth-child(odd) {
@@ -118,7 +121,6 @@
     /* Abstand zwischen Menge und Text */
     color: #333;
 }
-
 .preparation-section {
     margin-top: 20px;
     width: 250px;
@@ -129,16 +131,18 @@
     display: flex;
     align-items: center;
     gap: 26px;
-    font-size: 16px;
+    font-size: 18px;
     background-color: #EAEAEA;
     padding: 10px 15px;
     border-radius: 10px;
     min-width: 150px;
 }
-
-
-/* section profile */
-
+.border {
+    margin-top: 48px;
+    margin-bottom: 12px;
+    background-color: rgba(168, 165, 165, 0.2);
+    height: 1px;
+}
 .profile {
     display: flex;
     border-radius: 10px;
@@ -169,3 +173,6 @@
     margin-bottom: 20px;
 
 }
+
+
+
