--- a/Kochwelt/css/index.css
+++ b/Kochwelt/css/index.css
@@ -307,11 +307,15 @@ nav a:hover::after {
 .mobile-nav-links {
     overflow-x: hidden;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    height: 180px;
+    width: 130px;
+    right: 0;
+    pointer-events: none; 
 }
 
 .mobile-nav-links > nav {
+    pointer-events: auto; 
+
     display: none;
     flex-direction: column;
     z-index: 1;
