--- a/Kochwelt/css/rezept_des_tages.css
+++ b/Kochwelt/css/rezept_des_tages.css
@@ -24,6 +24,7 @@
     border-radius: 12px;
 }
 .recipe-1 {
+    padding-top: 1em;
     display: flex;
     flex-direction: row;
 }
@@ -45,6 +46,7 @@
     border-radius: 12px;
 }
 .recipe-2 {
+    padding-top: 1em;
     display: flex;
     flex-direction: row;
 }
@@ -66,6 +68,7 @@
     border-radius: 12px;
 }
 .recipe-3 {
+    padding-top: 1em;
     display: flex;
     flex-direction: row;
 }
@@ -87,6 +90,7 @@
     border-radius: 12px;
 }
 .recipe-4 {
+    padding-top: 1em;
     display: flex;
     flex-direction: row;
 }
