--- a/Kochwelt/css/rezept_des_tages.css
+++ b/Kochwelt/css/rezept_des_tages.css
@@ -126,6 +126,7 @@
 .recipe-image {
     width: 100%;
     height: 300px;
+    aspect-ratio: 1;
     object-fit: cover;
     border-radius: 10px;
     margin-bottom: 20px;
