--- a/Kochwelt/css/index.css
+++ b/Kochwelt/css/index.css
@@ -13,7 +13,7 @@ html {
 }
 
 .raleway {
-    font-family: "Raleway", sans-serif;
+    font-family: "Raleway", system-ui;
     font-optical-sizing: auto;
     font-style: normal;
 }
@@ -120,7 +120,7 @@ nav a:hover::after {
 }
 
 .recipe-section img {
-    width: min(480px, 100%);
+    width: min(280px, 100%);
     border-radius: 8px;
 }
 
@@ -146,6 +146,10 @@ nav a:hover::after {
     margin-bottom: 20px;
 }
 
+.recipe-description p {
+    gap: 10px;
+}
+
 .recipe-button {
     display: inline-block;
     padding: 10px 20px;
@@ -165,13 +169,10 @@ nav a:hover::after {
 /* section-3 */
 
 .section-new-rezipe {
-    margin-top: 2em;
     background-color: #e3e3e3;
     background-size: cover;
     padding-bottom: 15px;
-    margin-bottom: 2em;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin: 2em 5% 2em;
 }
 
 .title-new-section h2 {
@@ -243,7 +244,7 @@ nav a:hover::after {
 
 .footer {
     width: 100%;
-    font-family: "Raleway";
+    font-family:"Raleway", system-ui;
     display: flex;
     align-items: center;
     justify-content: space-between;
